--- a/style/css/style.css
+++ b/style/css/style.css
@@ -109,14 +109,6 @@ p, a, h1, h4, h5, h6 {
   color: #0a0a0a;
 }
 
-.color-light {
-  color: whitesmoke;
-}
-
-.color-dark {
-  color: #363636;
-}
-
 .color-primary {
   color: #00d1b2;
 }
@@ -138,7 +130,7 @@ p, a, h1, h4, h5, h6 {
 }
 
 .color-danger {
-  color: #363636;
+  color: #ff3860;
 }
 
 .bg-color-white {
@@ -147,14 +139,6 @@ p, a, h1, h4, h5, h6 {
 
 .bg-color-black {
   background-color: #0a0a0a;
-}
-
-.bg-color-light {
-  background-color: whitesmoke;
-}
-
-.bg-color-dark {
-  background-color: #363636;
 }
 
 .bg-color-primary {
@@ -178,7 +162,7 @@ p, a, h1, h4, h5, h6 {
 }
 
 .bg-color-danger {
-  background-color: #363636;
+  background-color: #ff3860;
 }
 
 .flex-row {
@@ -477,4 +461,198 @@ p, a, h1, h4, h5, h6 {
 
 .none {
   display: none;
+}
+
+.margin-1 {
+  margin: 1em;
+}
+
+.margin-2 {
+  margin: 1.5em;
+}
+
+.margin-3 {
+  margin: 2em;
+}
+
+.margin-4 {
+  margin: 2.5em;
+}
+
+.margin-5 {
+  margin: 3em;
+}
+
+.margin-6 {
+  margin: 3.5em;
+}
+
+.margin-7 {
+  margin: 4em;
+}
+
+.margin-8 {
+  margin: 4.5em;
+}
+
+.margin-9 {
+  margin: 5em;
+}
+
+.margin-top-1 {
+  margin-top: 1em;
+}
+
+.margin-top-2 {
+  margin-top: 1.5em;
+}
+
+.margin-top-3 {
+  margin-top: 2em;
+}
+
+.margin-top-4 {
+  margin-top: 2.5em;
+}
+
+.margin-top-5 {
+  margin-top: 3em;
+}
+
+.margin-top-6 {
+  margin-top: 3.5em;
+}
+
+.margin-top-7 {
+  margin-top: 4em;
+}
+
+.margin-top-8 {
+  margin-top: 4.5em;
+}
+
+.margin-top-9 {
+  margin-top: 5em;
+}
+
+.margin-right-1 {
+  margin-right: 1em;
+}
+
+.margin-right-2 {
+  margin-right: 1.5em;
+}
+
+.margin-right-3 {
+  margin-right: 2em;
+}
+
+.margin-right-4 {
+  margin-right: 2.5em;
+}
+
+.margin-right-5 {
+  margin-right: 3em;
+}
+
+.margin-right-6 {
+  margin-right: 3.5em;
+}
+
+.margin-right-7 {
+  margin-right: 4em;
+}
+
+.margin-right-8 {
+  margin-right: 4.5em;
+}
+
+.margin-right-9 {
+  margin-right: 5em;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1em;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 1.5em;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 2em;
+}
+
+.margin-bottom-4 {
+  margin-bottom: 2.5em;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 3em;
+}
+
+.margin-bottom-6 {
+  margin-bottom: 3.5em;
+}
+
+.margin-bottom-7 {
+  margin-bottom: 4em;
+}
+
+.margin-bottom-8 {
+  margin-bottom: 4.5em;
+}
+
+.margin-bottom-9 {
+  margin-bottom: 5em;
+}
+
+.margin-left-1 {
+  margin-left: 1em;
+}
+
+.margin-left-2 {
+  margin-left: 1.5em;
+}
+
+.margin-left-3 {
+  margin-left: 2em;
+}
+
+.margin-left-4 {
+  margin-left: 2.5em;
+}
+
+.margin-left-5 {
+  margin-left: 3em;
+}
+
+.margin-left-6 {
+  margin-left: 3.5em;
+}
+
+.margin-left-7 {
+  margin-left: 4em;
+}
+
+.margin-left-8 {
+  margin-left: 4.5em;
+}
+
+.margin-left-9 {
+  margin-left: 5em;
+}
+
+input, textarea {
+  width: 100%;
+  height: 4em;
+  outline: none;
+  border: 2px solid #b5b5b5;
+  border-radius: 8px;
+  padding-left: 0.75em;
+  color: #4a4a4a;
+}
+
+.width-half {
+  width: 50%;
 }
