--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -5,16 +5,22 @@
 $font: 'Poppins', sans-serif;
 
 // Colors
-$white: hsl(0, 0%, 100%);
-$black: hsl(0, 0%, 4%);
-$light: hsl(0, 0%, 96%);
-$dark: hsl(0, 0%, 21%);
 $primary: hsl(171, 100%, 41%);
 $link: hsl(217, 71%, 53%);
 $info: hsl(204, 86%, 53%);
 $success: hsl(141, 53%, 53%);
 $warning: hsl(48, 100%, 67%);
 $danger: hsl(348, 100%, 61%);
+
+$white: hsl(0, 0%, 100%);
+$white-ter: hsl(0, 0%, 96%);
+$grey-lighter: hsl(0, 0%, 86%);
+$grey-light: hsl(0, 0%, 71%);
+$grey: hsl(0, 0%, 48%);
+$grey-dark: hsl(0, 0%, 29%);
+$grey-darker: hsl(0, 0%, 21%);
+$black-ter: hsl(0, 0%, 14%);
+$black: hsl(0, 0%, 4%);
 
 
 * {
@@ -32,7 +38,7 @@ body {
 // Text
 p, a, h1, h4, h5, h6 {
     font-size: 1rem;
-    color: $dark;
+    color: $grey-darker;
 }
 
 // Font-Size
@@ -67,26 +73,22 @@ p, a, h1, h4, h5, h6 {
 // Text-Colors
 .color-white { color: $white; }
 .color-black { color: $black; }
-.color-light { color: $light; }
-.color-dark { color: $dark; }
 .color-primary { color: $primary; }
 .color-link { color: $link; }
 .color-info { color: $info; }
 .color-success { color: $success; }
 .color-warning { color: $warning; }
-.color-danger { color: $dark; }
+.color-danger { color: $danger; }
 
 // Background-Colors
 .bg-color-white { background-color: $white; }
 .bg-color-black { background-color: $black; }
-.bg-color-light { background-color: $light; }
-.bg-color-dark { background-color: $dark; }
 .bg-color-primary { background-color: $primary; }
 .bg-color-link { background-color: $link; }
 .bg-color-info { background-color: $info; }
 .bg-color-success { background-color: $success; }
 .bg-color-warning { background-color: $warning; }
-.bg-color-danger { background-color: $dark; }
+.bg-color-danger { background-color: $danger; }
 
 // Flexbox
 .flex-row { flex-direction: row; }
@@ -151,4 +153,72 @@ p, a, h1, h4, h5, h6 {
 .inline { display: inline }
 .inline-block { display: inline }
 .inline-flex { display: inline-flex }
-.none {display: none;}
+.none { display: none; }
+
+// Margin
+.margin-1 { margin: 1em }
+.margin-2 { margin: 1.5em }
+.margin-3 { margin: 2em }
+.margin-4 { margin: 2.5em }
+.margin-5 { margin: 3em }
+.margin-6 { margin: 3.5em }
+.margin-7 { margin: 4em }
+.margin-8 { margin: 4.5em }
+.margin-9 { margin: 5em }
+
+.margin-top-1 { margin-top: 1em }
+.margin-top-2 { margin-top: 1.5em }
+.margin-top-3 { margin-top: 2em }
+.margin-top-4 { margin-top: 2.5em }
+.margin-top-5 { margin-top: 3em }
+.margin-top-6 { margin-top: 3.5em }
+.margin-top-7 { margin-top: 4em }
+.margin-top-8 { margin-top: 4.5em }
+.margin-top-9 { margin-top: 5em }
+
+.margin-right-1 { margin-right: 1em }
+.margin-right-2 { margin-right: 1.5em }
+.margin-right-3 { margin-right: 2em }
+.margin-right-4 { margin-right: 2.5em }
+.margin-right-5 { margin-right: 3em }
+.margin-right-6 { margin-right: 3.5em }
+.margin-right-7 { margin-right: 4em }
+.margin-right-8 { margin-right: 4.5em }
+.margin-right-9 { margin-right: 5em }
+
+.margin-bottom-1 { margin-bottom: 1em }
+.margin-bottom-2 { margin-bottom: 1.5em }
+.margin-bottom-3 { margin-bottom: 2em }
+.margin-bottom-4 { margin-bottom: 2.5em }
+.margin-bottom-5 { margin-bottom: 3em }
+.margin-bottom-6 { margin-bottom: 3.5em }
+.margin-bottom-7 { margin-bottom: 4em }
+.margin-bottom-8 { margin-bottom: 4.5em }
+.margin-bottom-9 { margin-bottom: 5em }
+
+.margin-left-1 { margin-left: 1em }
+.margin-left-2 { margin-left: 1.5em }
+.margin-left-3 { margin-left: 2em }
+.margin-left-4 { margin-left: 2.5em }
+.margin-left-5 { margin-left: 3em }
+.margin-left-6 { margin-left: 3.5em }
+.margin-left-7 { margin-left: 4em }
+.margin-left-8 { margin-left: 4.5em }
+.margin-left-9 { margin-left: 5em }
+
+// Forms
+input, textarea {
+    width: 100%;
+    height: 4em;
+    outline: none;
+    border: 2px solid $grey-light;
+    border-radius: 8px;
+    padding-left: 0.75em;
+    color: $grey-dark;
+}
+
+// Width
+
+.width-half {
+    width: 50%;
+}
