--- a/style/css/style.css
+++ b/style/css/style.css
@@ -17,6 +17,64 @@ p, a, h1, h4, h5, h6 {
   color: #363636;
 }
 
+.input, .textarea {
+  width: 100%;
+  height: 4em;
+  outline: none;
+  border: 2px solid #dbdbdb;
+  border-radius: 12px;
+  padding-left: 0.75em;
+  color: #7a7a7a;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.input::-webkit-input-placeholder, .textarea::-webkit-input-placeholder {
+  font-family: "Poppins", sans-serif;
+}
+
+.input:-ms-input-placeholder, .textarea:-ms-input-placeholder {
+  font-family: "Poppins", sans-serif;
+}
+
+.input::-ms-input-placeholder, .textarea::-ms-input-placeholder {
+  font-family: "Poppins", sans-serif;
+}
+
+.input::placeholder, .textarea::placeholder {
+  font-family: "Poppins", sans-serif;
+}
+
+.textarea {
+  min-height: 4em;
+  height: 12em;
+  padding-top: 1em;
+  resize: vertical;
+}
+
+.checkbox {
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.button {
+  width: 100%;
+  height: 4em;
+  outline: none;
+  border: none;
+  border-radius: 12px;
+  background-color: #00d1b2;
+  color: white;
+  font-size: 1rem;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+.button:hover {
+  -webkit-filter: brightness(95%);
+          filter: brightness(95%);
+}
+
 .size-1 {
   font-size: 3rem;
 }
@@ -101,14 +159,6 @@ p, a, h1, h4, h5, h6 {
   text-align: right;
 }
 
-.color-white {
-  color: white;
-}
-
-.color-black {
-  color: #0a0a0a;
-}
-
 .color-primary {
   color: #00d1b2;
 }
@@ -131,6 +181,42 @@ p, a, h1, h4, h5, h6 {
 
 .color-danger {
   color: #ff3860;
+}
+
+.color-white {
+  color: white;
+}
+
+.color-white-ter {
+  color: whitesmoke;
+}
+
+.color-grey-lighter {
+  color: #dbdbdb;
+}
+
+.color-grey-light {
+  color: #b5b5b5;
+}
+
+.color-grey {
+  color: #7a7a7a;
+}
+
+.color-grey-dark {
+  color: #4a4a4a;
+}
+
+.color-grey-darker {
+  color: #363636;
+}
+
+.color-black-ter {
+  color: #242424;
+}
+
+.color-black {
+  color: #0a0a0a;
 }
 
 .bg-color-white {
@@ -163,6 +249,42 @@ p, a, h1, h4, h5, h6 {
 
 .bg-color-danger {
   background-color: #ff3860;
+}
+
+.bg-color-white {
+  color: white;
+}
+
+.bg-color-white-ter {
+  color: whitesmoke;
+}
+
+.bg-color-grey-lighter {
+  color: #dbdbdb;
+}
+
+.bg-color-grey-light {
+  color: #b5b5b5;
+}
+
+.bg-color-grey {
+  color: #7a7a7a;
+}
+
+.bg-color-grey-dark {
+  color: #4a4a4a;
+}
+
+.bg-color-grey-darker {
+  color: #363636;
+}
+
+.bg-color-black-ter {
+  color: #242424;
+}
+
+.bg-color-black {
+  color: #0a0a0a;
 }
 
 .flex-row {
@@ -503,6 +625,10 @@ p, a, h1, h4, h5, h6 {
   margin: 5em;
 }
 
+.margin-auto {
+  margin: auto;
+}
+
 .margin-top-1 {
   margin-top: 1em;
 }
@@ -537,6 +663,10 @@ p, a, h1, h4, h5, h6 {
 
 .margin-top-9 {
   margin-top: 5em;
+}
+
+.margin-top-auto {
+  margin-top: auto;
 }
 
 .margin-right-1 {
@@ -575,6 +705,10 @@ p, a, h1, h4, h5, h6 {
   margin-right: 5em;
 }
 
+.margin-right-auto {
+  margin-right: auto;
+}
+
 .margin-bottom-1 {
   margin-bottom: 1em;
 }
@@ -609,6 +743,10 @@ p, a, h1, h4, h5, h6 {
 
 .margin-bottom-9 {
   margin-bottom: 5em;
+}
+
+.margin-bottom-auto {
+  margin-bottom: auto;
 }
 
 .margin-left-1 {
@@ -647,62 +785,8 @@ p, a, h1, h4, h5, h6 {
   margin-left: 5em;
 }
 
-.input, .textarea {
-  width: 100%;
-  height: 4em;
-  outline: none;
-  border: 2px solid #b5b5b5;
-  border-radius: 8px;
-  padding-left: 0.75em;
-  color: #4a4a4a;
-  font-size: 1rem;
-  font-family: "Poppins", sans-serif;
-}
-
-.input::-webkit-input-placeholder, .textarea::-webkit-input-placeholder {
-  font-family: "Poppins", sans-serif;
-}
-
-.input:-ms-input-placeholder, .textarea:-ms-input-placeholder {
-  font-family: "Poppins", sans-serif;
-}
-
-.input::-ms-input-placeholder, .textarea::-ms-input-placeholder {
-  font-family: "Poppins", sans-serif;
-}
-
-.input::placeholder, .textarea::placeholder {
-  font-family: "Poppins", sans-serif;
-}
-
-.textarea {
-  min-height: 4em;
-  height: 12em;
-  padding-top: 1em;
-  resize: vertical;
-}
-
-.checkbox {
-  width: 1.5em;
-  height: 1.5em;
-}
-
-.button {
-  width: 100%;
-  height: 4em;
-  outline: none;
-  border: none;
-  border-radius: 8px;
-  background-color: #00d1b2;
-  color: white;
-  font-size: 1rem;
-  -webkit-transition: all 200ms;
-  transition: all 200ms;
-}
-
-.button:hover {
-  -webkit-filter: brightness(95%);
-          filter: brightness(95%);
+.margin-left-auto {
+  margin-left: auto;
 }
 
 .width-full {
@@ -807,4 +891,28 @@ p, a, h1, h4, h5, h6 {
 
 .min-height-7 {
   min-height: 32em;
+}
+
+.border-radius-1 {
+  border-radius: 8px;
+}
+
+.border-radius-2 {
+  border-radius: 12px;
+}
+
+.border-radius-3 {
+  border-radius: 16px;
+}
+
+.border-radius-4 {
+  border-radius: 20px;
+}
+
+.border-radius-5 {
+  border-radius: 50%;
+}
+
+.border-radius-6 {
+  border-radius: 100%;
 }
