--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -22,9 +22,15 @@ $grey-darker: hsl(0, 0%, 21%);
 $black-ter: hsl(0, 0%, 14%);
 $black: hsl(0, 0%, 4%);
 
+// Border-Radius-Level
 $border-radius-level-1: 8px;
+$border-radius-level-2: 12px;
+$border-radius-level-3: 16px;
+$border-radius-level-4: 20px;
+$border-radius-level-5: 50%;
+$border-radius-level-6: 100%;
 
-
+// General
 * {
     box-sizing: border-box;
     margin: 0;
@@ -41,6 +47,53 @@ body {
 p, a, h1, h4, h5, h6 {
     font-size: 1rem;
     color: $grey-darker;
+}
+
+// Forms
+.input, .textarea {
+    width: 100%;
+    height: 4em;
+    outline: none;
+    border: 2px solid $grey-lighter;
+    border-radius: $border-radius-level-2;
+    padding-left: 0.75em;
+    color: $grey;
+    font-size: 1rem;
+    font-family: $font;
+
+    &::placeholder {
+        font-family: $font;
+    }
+}
+
+.textarea {
+    min-height: 4em;
+    height: 12em;
+    padding-top: 1em;
+    resize: vertical;
+}
+
+.checkbox {
+    width: 1.5em;
+    height: 1.5em;
+}
+
+// Buttons
+.button {
+    width: 100%;
+    height: 4em;
+    outline: none;
+    border: none;
+    border-radius: $border-radius-level-2;
+    background-color: $primary;
+    color: $white;
+    font-size: 1rem;
+
+    transition: all 200ms;
+
+    &:hover {
+        filter: brightness(95%);
+    }
 }
 
 // Font-Size
@@ -73,14 +126,22 @@ p, a, h1, h4, h5, h6 {
 .align-right { text-align: right; }
 
 // Text-Colors
-.color-white { color: $white; }
-.color-black { color: $black; }
 .color-primary { color: $primary; }
 .color-link { color: $link; }
 .color-info { color: $info; }
 .color-success { color: $success; }
 .color-warning { color: $warning; }
 .color-danger { color: $danger; }
+
+.color-white { color: $white; }
+.color-white-ter { color: $white-ter; }
+.color-grey-lighter { color: $grey-lighter; }
+.color-grey-light { color: $grey-light; }
+.color-grey { color: $grey; }
+.color-grey-dark { color: $grey-dark; }
+.color-grey-darker { color: $grey-darker; }
+.color-black-ter { color: $black-ter; }
+.color-black { color: $black; }
 
 // Background-Colors
 .bg-color-white { background-color: $white; }
@@ -91,6 +152,16 @@ p, a, h1, h4, h5, h6 {
 .bg-color-success { background-color: $success; }
 .bg-color-warning { background-color: $warning; }
 .bg-color-danger { background-color: $danger; }
+
+.bg-color-white { color: $white; }
+.bg-color-white-ter { color: $white-ter; }
+.bg-color-grey-lighter { color: $grey-lighter; }
+.bg-color-grey-light { color: $grey-light; }
+.bg-color-grey { color: $grey; }
+.bg-color-grey-dark { color: $grey-dark; }
+.bg-color-grey-darker { color: $grey-darker; }
+.bg-color-black-ter { color: $black-ter; }
+.bg-color-black { color: $black; }
 
 // Flexbox
 .flex-row { flex-direction: row; }
@@ -153,107 +224,65 @@ p, a, h1, h4, h5, h6 {
 .flex { display: flex; }
 .block { display: block;}
 .inline { display: inline }
-.inline-block { display: inline }
-.inline-flex { display: inline-flex }
+.inline-block { display: inline; }
+.inline-flex { display: inline-flex; }
 .none { display: none; }
 
 // Margin
-.margin-1 { margin: 1em }
-.margin-2 { margin: 1.5em }
-.margin-3 { margin: 2em }
-.margin-4 { margin: 2.5em }
-.margin-5 { margin: 3em }
-.margin-6 { margin: 3.5em }
-.margin-7 { margin: 4em }
-.margin-8 { margin: 4.5em }
-.margin-9 { margin: 5em }
+.margin-1 { margin: 1em; }
+.margin-2 { margin: 1.5em; }
+.margin-3 { margin: 2em; }
+.margin-4 { margin: 2.5em; }
+.margin-5 { margin: 3em; }
+.margin-6 { margin: 3.5em; }
+.margin-7 { margin: 4em; }
+.margin-8 { margin: 4.5em; }
+.margin-9 { margin: 5em; }
+.margin-auto { margin: auto; }
 
-.margin-top-1 { margin-top: 1em }
-.margin-top-2 { margin-top: 1.5em }
-.margin-top-3 { margin-top: 2em }
-.margin-top-4 { margin-top: 2.5em }
-.margin-top-5 { margin-top: 3em }
-.margin-top-6 { margin-top: 3.5em }
-.margin-top-7 { margin-top: 4em }
-.margin-top-8 { margin-top: 4.5em }
-.margin-top-9 { margin-top: 5em }
+.margin-top-1 { margin-top: 1em; }
+.margin-top-2 { margin-top: 1.5em; }
+.margin-top-3 { margin-top: 2em; }
+.margin-top-4 { margin-top: 2.5em; }
+.margin-top-5 { margin-top: 3em; }
+.margin-top-6 { margin-top: 3.5em; }
+.margin-top-7 { margin-top: 4em; }
+.margin-top-8 { margin-top: 4.5em; }
+.margin-top-9 { margin-top: 5em; }
+.margin-top-auto { margin-top: auto; }
 
-.margin-right-1 { margin-right: 1em }
-.margin-right-2 { margin-right: 1.5em }
-.margin-right-3 { margin-right: 2em }
-.margin-right-4 { margin-right: 2.5em }
-.margin-right-5 { margin-right: 3em }
-.margin-right-6 { margin-right: 3.5em }
-.margin-right-7 { margin-right: 4em }
-.margin-right-8 { margin-right: 4.5em }
-.margin-right-9 { margin-right: 5em }
+.margin-right-1 { margin-right: 1em; }
+.margin-right-2 { margin-right: 1.5em; }
+.margin-right-3 { margin-right: 2em; }
+.margin-right-4 { margin-right: 2.5em; }
+.margin-right-5 { margin-right: 3em; }
+.margin-right-6 { margin-right: 3.5em; }
+.margin-right-7 { margin-right: 4em; }
+.margin-right-8 { margin-right: 4.5em; }
+.margin-right-9 { margin-right: 5em; }
+.margin-right-auto { margin-right: auto; }
 
-.margin-bottom-1 { margin-bottom: 1em }
-.margin-bottom-2 { margin-bottom: 1.5em }
-.margin-bottom-3 { margin-bottom: 2em }
-.margin-bottom-4 { margin-bottom: 2.5em }
-.margin-bottom-5 { margin-bottom: 3em }
-.margin-bottom-6 { margin-bottom: 3.5em }
-.margin-bottom-7 { margin-bottom: 4em }
-.margin-bottom-8 { margin-bottom: 4.5em }
-.margin-bottom-9 { margin-bottom: 5em }
+.margin-bottom-1 { margin-bottom: 1em; }
+.margin-bottom-2 { margin-bottom: 1.5em; }
+.margin-bottom-3 { margin-bottom: 2em; }
+.margin-bottom-4 { margin-bottom: 2.5em; }
+.margin-bottom-5 { margin-bottom: 3em; }
+.margin-bottom-6 { margin-bottom: 3.5em; }
+.margin-bottom-7 { margin-bottom: 4em; }
+.margin-bottom-8 { margin-bottom: 4.5em; }
+.margin-bottom-9 { margin-bottom: 5em; }
+.margin-bottom-auto { margin-bottom: auto; }
 
-.margin-left-1 { margin-left: 1em }
-.margin-left-2 { margin-left: 1.5em }
-.margin-left-3 { margin-left: 2em }
-.margin-left-4 { margin-left: 2.5em }
-.margin-left-5 { margin-left: 3em }
-.margin-left-6 { margin-left: 3.5em }
-.margin-left-7 { margin-left: 4em }
-.margin-left-8 { margin-left: 4.5em }
-.margin-left-9 { margin-left: 5em }
-
-// Forms
-.input, .textarea {
-    width: 100%;
-    height: 4em;
-    outline: none;
-    border: 2px solid $grey-light;
-    border-radius: $border-radius-level-1;
-    padding-left: 0.75em;
-    color: $grey-dark;
-    font-size: 1rem;
-    font-family: $font;
-
-    &::placeholder {
-        font-family: $font;
-    }
-}
-
-.textarea {
-    min-height: 4em;
-    height: 12em;
-    padding-top: 1em;
-    resize: vertical;
-}
-
-.checkbox {
-    width: 1.5em;
-    height: 1.5em;
-}
-
-// Buttons
-.button {
-    width: 100%;
-    height: 4em;
-    outline: none;
-    border: none;
-    border-radius: $border-radius-level-1;
-    background-color: $primary;
-    color: $white;
-    font-size: 1rem;
-
-    transition: all 200ms;
-
-    &:hover {
-        filter: brightness(95%);
-    }
-}
+.margin-left-1 { margin-left: 1em; }
+.margin-left-2 { margin-left: 1.5em; }
+.margin-left-3 { margin-left: 2em; }
+.margin-left-4 { margin-left: 2.5em; }
+.margin-left-5 { margin-left: 3em; }
+.margin-left-6 { margin-left: 3.5em; }
+.margin-left-7 { margin-left: 4em; }
+.margin-left-8 { margin-left: 4.5em; }
+.margin-left-9 { margin-left: 5em; }
+.margin-left-auto { margin-left: auto; }
 
 // Sizes
 
@@ -285,3 +314,12 @@ p, a, h1, h4, h5, h6 {
 .min-height-5 { min-height: 20em; }
 .min-height-6 { min-height: 24em; }
 .min-height-7 { min-height: 32em; }
+
+// Border-Radius
+
+.border-radius-1 { border-radius: $border-radius-level-1; }
+.border-radius-2 { border-radius: $border-radius-level-2; }
+.border-radius-3 { border-radius: $border-radius-level-3; }
+.border-radius-4 { border-radius: $border-radius-level-4; }
+.border-radius-5 { border-radius: $border-radius-level-5; }
+.border-radius-6 { border-radius: $border-radius-level-6; }
