--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
 // Fonts
-$font: 'Poppins', sans-serif;
+$font: Arial, Helvetica, sans-serif;
 
 // Colors
 $primary: hsl(171, 100%, 41%);
@@ -24,10 +21,10 @@ $black: hsl(0, 0%, 4%);
 
 // Border-Radius-Level
 $border-radius-none: 0;
-$border-radius-level-1: 8px;
-$border-radius-level-2: 12px;
-$border-radius-level-3: 16px;
-$border-radius-level-4: 20px;
+$border-radius-level-1: 4px;
+$border-radius-level-2: 8px;
+$border-radius-level-3: 14px;
+$border-radius-level-4: 16px;
 $border-radius-level-5: 50%;
 $border-radius-level-6: 100%;
 
@@ -48,6 +45,12 @@ body {
 p, a, h1, h4, h5, h6 {
     font-size: 1rem;
     color: $grey-darker;
+}
+
+// Boxes
+
+.box {
+    width: 100%;
 }
 
 // Forms
@@ -78,7 +81,7 @@ p, a, h1, h4, h5, h6 {
         border-radius: $border-radius-level-1;
     }
 
-    &.medium {
+    &.normal {
         height: 4em;
         font-size: 1rem;
         border-radius: $border-radius-level-2;
@@ -105,7 +108,7 @@ p, a, h1, h4, h5, h6 {
         font-size: 0.75rem;
     }
 
-    &.medium {
+    &.normal {
         min-height: 4em;
         height: 12em;
         font-size: 1rem;
@@ -161,7 +164,7 @@ p, a, h1, h4, h5, h6 {
         border-radius: $border-radius-level-1;
     }
 
-    &.medium {
+    &.normal {
         height: 4em;
         font-size: 1rem;
         border-radius: $border-radius-level-2;
@@ -184,11 +187,11 @@ p, a, h1, h4, h5, h6 {
 .size-7 { font-size: 0.75rem; }
 
 // Font-Weight
-.weight-light { font-weight: 300; }
-.weight-normal { font-weight: 400; }
-.weight-medium { font-weight: 500; }
-.weight-semi-bold { font-weight: 600; }
-.weight-bold { font-weight: 700; }
+.w-light { font-weight: 300; }
+.w-normal { font-weight: 400; }
+.w-medium { font-weight: 500; }
+.w-semi-bold { font-weight: 600; }
+.w-bold { font-weight: 700; }
 
 // Text-Transformation
 .capitalize { text-transform: capitalize; }
@@ -199,7 +202,7 @@ p, a, h1, h4, h5, h6 {
 .justify { text-align: justify; }
 
 // Text-Alignment
-.align-centered { text-align: center; }
+.align-center { text-align: center; }
 .align-left { text-align: left; }
 .align-right { text-align: right; }
 
@@ -231,15 +234,15 @@ p, a, h1, h4, h5, h6 {
 .bg-color-warning { background-color: $warning; }
 .bg-color-danger { background-color: $danger; }
 
-.bg-color-white { color: $white; }
-.bg-color-white-ter { color: $white-ter; }
-.bg-color-grey-lighter { color: $grey-lighter; }
-.bg-color-grey-light { color: $grey-light; }
-.bg-color-grey { color: $grey; }
-.bg-color-grey-dark { color: $grey-dark; }
-.bg-color-grey-darker { color: $grey-darker; }
-.bg-color-black-ter { color: $black-ter; }
-.bg-color-black { color: $black; }
+.bg-color-white { background-color: $white; }
+.bg-color-white-ter { background-color: $white-ter; }
+.bg-color-grey-lighter { background-color: $grey-lighter; }
+.bg-color-grey-light { background-color: $grey-light; }
+.bg-color-grey { background-color: $grey; }
+.bg-color-grey-dark { background-color: $grey-dark; }
+.bg-color-grey-darker { background-color: $grey-darker; }
+.bg-color-black-ter { background-color: $black-ter; }
+.bg-color-black { background-color: $black; }
 
 // Flexbox
 .flex-row { flex-direction: row; }
@@ -307,146 +310,156 @@ p, a, h1, h4, h5, h6 {
 .none { display: none; }
 
 // Margin
-.margin-1 { margin: 1em; }
-.margin-2 { margin: 1.5em; }
-.margin-3 { margin: 2em; }
-.margin-4 { margin: 2.5em; }
-.margin-5 { margin: 3em; }
-.margin-6 { margin: 3.5em; }
-.margin-7 { margin: 4em; }
-.margin-8 { margin: 4.5em; }
-.margin-9 { margin: 5em; }
-.margin-auto { margin: auto; }
+.m-0 { margin: 0; }
+.m-1 { margin: 1em; }
+.m-2 { margin: 1.5em; }
+.m-3 { margin: 2em; }
+.m-4 { margin: 2.5em; }
+.m-5 { margin: 3em; }
+.m-6 { margin: 3.5em; }
+.m-7 { margin: 4em; }
+.m-8 { margin: 4.5em; }
+.m-9 { margin: 5em; }
+.m-auto { margin: auto; }
 
-.margin-top-1 { margin-top: 1em; }
-.margin-top-2 { margin-top: 1.5em; }
-.margin-top-3 { margin-top: 2em; }
-.margin-top-4 { margin-top: 2.5em; }
-.margin-top-5 { margin-top: 3em; }
-.margin-top-6 { margin-top: 3.5em; }
-.margin-top-7 { margin-top: 4em; }
-.margin-top-8 { margin-top: 4.5em; }
-.margin-top-9 { margin-top: 5em; }
-.margin-top-auto { margin-top: auto; }
+.mt-0 { margin-top: 0; }
+.mt-1 { margin-top: 1em; }
+.mt-2 { margin-top: 1.5em; }
+.mt-3 { margin-top: 2em; }
+.mt-4 { margin-top: 2.5em; }
+.mt-5 { margin-top: 3em; }
+.mt-6 { margin-top: 3.5em; }
+.mt-7 { margin-top: 4em; }
+.mt-8 { margin-top: 4.5em; }
+.mt-9 { margin-top: 5em; }
+.mt-auto { margin-top: auto; }
 
-.margin-right-1 { margin-right: 1em; }
-.margin-right-2 { margin-right: 1.5em; }
-.margin-right-3 { margin-right: 2em; }
-.margin-right-4 { margin-right: 2.5em; }
-.margin-right-5 { margin-right: 3em; }
-.margin-right-6 { margin-right: 3.5em; }
-.margin-right-7 { margin-right: 4em; }
-.margin-right-8 { margin-right: 4.5em; }
-.margin-right-9 { margin-right: 5em; }
-.margin-right-auto { margin-right: auto; }
+.mr-0 { margin-right: 0; }
+.mr-1 { margin-right: 1em; }
+.mr-2 { margin-right: 1.5em; }
+.mr-3 { margin-right: 2em; }
+.mr-4 { margin-right: 2.5em; }
+.mr-5 { margin-right: 3em; }
+.mr-6 { margin-right: 3.5em; }
+.mr-7 { margin-right: 4em; }
+.mr-8 { margin-right: 4.5em; }
+.mr-9 { margin-right: 5em; }
+.mr-auto { margin-right: auto; }
 
-.margin-bottom-1 { margin-bottom: 1em; }
-.margin-bottom-2 { margin-bottom: 1.5em; }
-.margin-bottom-3 { margin-bottom: 2em; }
-.margin-bottom-4 { margin-bottom: 2.5em; }
-.margin-bottom-5 { margin-bottom: 3em; }
-.margin-bottom-6 { margin-bottom: 3.5em; }
-.margin-bottom-7 { margin-bottom: 4em; }
-.margin-bottom-8 { margin-bottom: 4.5em; }
-.margin-bottom-9 { margin-bottom: 5em; }
-.margin-bottom-auto { margin-bottom: auto; }
+.mb-0 { margin-bottom: 0; }
+.mb-1 { margin-bottom: 1em; }
+.mb-2 { margin-bottom: 1.5em; }
+.mb-3 { margin-bottom: 2em; }
+.mb-4 { margin-bottom: 2.5em; }
+.mb-5 { margin-bottom: 3em; }
+.mb-6 { margin-bottom: 3.5em; }
+.mb-7 { margin-bottom: 4em; }
+.mb-8 { margin-bottom: 4.5em; }
+.mb-9 { margin-bottom: 5em; }
+.mb-auto { margin-bottom: auto; }
 
-.margin-left-1 { margin-left: 1em; }
-.margin-left-2 { margin-left: 1.5em; }
-.margin-left-3 { margin-left: 2em; }
-.margin-left-4 { margin-left: 2.5em; }
-.margin-left-5 { margin-left: 3em; }
-.margin-left-6 { margin-left: 3.5em; }
-.margin-left-7 { margin-left: 4em; }
-.margin-left-8 { margin-left: 4.5em; }
-.margin-left-9 { margin-left: 5em; }
-.margin-left-auto { margin-left: auto; }
+.ml-0 { margin-left: 0; }
+.ml-1 { margin-left: 1em; }
+.ml-2 { margin-left: 1.5em; }
+.ml-3 { margin-left: 2em; }
+.ml-4 { margin-left: 2.5em; }
+.ml-5 { margin-left: 3em; }
+.ml-6 { margin-left: 3.5em; }
+.ml-7 { margin-left: 4em; }
+.ml-8 { margin-left: 4.5em; }
+.ml-9 { margin-left: 5em; }
+.ml-auto { margin-left: auto; }
 
 // Padding
-.padding-1 { padding: 1em; }
-.padding-2 { padding: 1.5em; }
-.padding-3 { padding: 2em; }
-.padding-4 { padding: 2.5em; }
-.padding-5 { padding: 3em; }
-.padding-6 { padding: 3.5em; }
-.padding-7 { padding: 4em; }
-.padding-8 { padding: 4.5em; }
-.padding-9 { padding: 5em; }
-.padding-auto { padding: auto; }
+.p-0 { padding: 0; }
+.p-1 { padding: 1em; }
+.p-2 { padding: 1.5em; }
+.p-3 { padding: 2em; }
+.p-4 { padding: 2.5em; }
+.p-5 { padding: 3em; }
+.p-6 { padding: 3.5em; }
+.p-7 { padding: 4em; }
+.p-8 { padding: 4.5em; }
+.p-9 { padding: 5em; }
+.p-auto { padding: auto; }
 
-.padding-top-1 { padding-top: 1em; }
-.padding-top-2 { padding-top: 1.5em; }
-.padding-top-3 { padding-top: 2em; }
-.padding-top-4 { padding-top: 2.5em; }
-.padding-top-5 { padding-top: 3em; }
-.padding-top-6 { padding-top: 3.5em; }
-.padding-top-7 { padding-top: 4em; }
-.padding-top-8 { padding-top: 4.5em; }
-.padding-top-9 { padding-top: 5em; }
-.padding-top-auto { padding-top: auto; }
+.pt-0 { padding-top: 0; }
+.pt-1 { padding-top: 1em; }
+.pt-2 { padding-top: 1.5em; }
+.pt-3 { padding-top: 2em; }
+.pt-4 { padding-top: 2.5em; }
+.pt-5 { padding-top: 3em; }
+.pt-6 { padding-top: 3.5em; }
+.pt-7 { padding-top: 4em; }
+.pt-8 { padding-top: 4.5em; }
+.pt-9 { padding-top: 5em; }
+.pt-auto { padding-top: auto; }
 
-.padding-right-1 { padding-right: 1em; }
-.padding-right-2 { padding-right: 1.5em; }
-.padding-right-3 { padding-right: 2em; }
-.padding-right-4 { padding-right: 2.5em; }
-.padding-right-5 { padding-right: 3em; }
-.padding-right-6 { padding-right: 3.5em; }
-.padding-right-7 { padding-right: 4em; }
-.padding-right-8 { padding-right: 4.5em; }
-.padding-right-9 { padding-right: 5em; }
-.padding-right-auto { padding-right: auto; }
+.pr-0 { padding-right: 0; }
+.pr-1 { padding-right: 1em; }
+.pr-2 { padding-right: 1.5em; }
+.pr-3 { padding-right: 2em; }
+.pr-4 { padding-right: 2.5em; }
+.pr-5 { padding-right: 3em; }
+.pr-6 { padding-right: 3.5em; }
+.pr-7 { padding-right: 4em; }
+.pr-8 { padding-right: 4.5em; }
+.pr-9 { padding-right: 5em; }
+.pr-auto { padding-right: auto; }
 
-.padding-bottom-1 { padding-bottom: 1em; }
-.padding-bottom-2 { padding-bottom: 1.5em; }
-.padding-bottom-3 { padding-bottom: 2em; }
-.padding-bottom-4 { padding-bottom: 2.5em; }
-.padding-bottom-5 { padding-bottom: 3em; }
-.padding-bottom-6 { padding-bottom: 3.5em; }
-.padding-bottom-7 { padding-bottom: 4em; }
-.padding-bottom-8 { padding-bottom: 4.5em; }
-.padding-bottom-9 { padding-bottom: 5em; }
-.padding-bottom-auto { padding-bottom: auto; }
+.pb-0 { padding-bottom: 0; }
+.pb-1 { padding-bottom: 1em; }
+.pb-2 { padding-bottom: 1.5em; }
+.pb-3 { padding-bottom: 2em; }
+.pb-4 { padding-bottom: 2.5em; }
+.pb-5 { padding-bottom: 3em; }
+.pb-6 { padding-bottom: 3.5em; }
+.pb-7 { padding-bottom: 4em; }
+.pb-8 { padding-bottom: 4.5em; }
+.pb-9 { padding-bottom: 5em; }
+.pb-auto { padding-bottom: auto; }
 
-.padding-left-1 { padding-left: 1em; }
-.padding-left-2 { padding-left: 1.5em; }
-.padding-left-3 { padding-left: 2em; }
-.padding-left-4 { padding-left: 2.5em; }
-.padding-left-5 { padding-left: 3em; }
-.padding-left-6 { padding-left: 3.5em; }
-.padding-left-7 { padding-left: 4em; }
-.padding-left-8 { padding-left: 4.5em; }
-.padding-left-9 { padding-left: 5em; }
-.padding-left-auto { padding-left: auto; }
+.pl-0 { padding-left: 0em; }
+.pl-1 { padding-left: 1em; }
+.pl-2 { padding-left: 1.5em; }
+.pl-3 { padding-left: 2em; }
+.pl-4 { padding-left: 2.5em; }
+.pl-5 { padding-left: 3em; }
+.pl-6 { padding-left: 3.5em; }
+.pl-7 { padding-left: 4em; }
+.pl-8 { padding-left: 4.5em; }
+.pl-9 { padding-left: 5em; }
+.pl-auto { padding-left: auto; }
 
 // Sizes
-.width-full { width: 100%; }
-.width-half { width: 50%; }
-.width-1-quarter { width: 25%; }
-.width-3-quarter { width: 75%; }
-.width-1 { width: 4em; }
-.width-2 { width: 8em; }
-.width-3 { width: 12em; }
-.width-4 { width: 16em; }
-.width-5 { width: 20em; }
-.width-6 { width: 24em; }
-.width-7 { width: 32em; }
+.w-full { width: 100%; }
+.w-half { width: 50%; }
+.w-1-quarter { width: 25%; }
+.w-3-quarter { width: 75%; }
+.w-1 { width: 4em; }
+.w-2 { width: 8em; }
+.w-3 { width: 12em; }
+.w-4 { width: 16em; }
+.w-5 { width: 20em; }
+.w-6 { width: 24em; }
+.w-7 { width: 32em; }
 
-.height-full { height: 100vh; }
-.height-1 { height: 4em; }
-.height-2 { height: 8em; }
-.height-3 { height: 12em; }
-.height-4 { height: 16em; }
-.height-5 { height: 20em; }
-.height-6 { height: 24em; }
-.height-7 { height: 32em; }
+.h-full { height: 100vh; }
+.h-1 { height: 4em; }
+.h-2 { height: 8em; }
+.h-3 { height: 12em; }
+.h-4 { height: 16em; }
+.h-5 { height: 20em; }
+.h-6 { height: 24em; }
+.h-7 { height: 32em; }
 
-.min-height-1 { min-height: 4em; }
-.min-height-2 { min-height: 8em; }
-.min-height-3 { min-height: 12em; }
-.min-height-4 { min-height: 16em; }
-.min-height-5 { min-height: 20em; }
-.min-height-6 { min-height: 24em; }
-.min-height-7 { min-height: 32em; }
+.mh-1 { min-height: 4em; }
+.mh-2 { min-height: 8em; }
+.mh-3 { min-height: 12em; }
+.mh-4 { min-height: 16em; }
+.mh-5 { min-height: 20em; }
+.mh-6 { min-height: 24em; }
+.mh-7 { min-height: 32em; }
 
 // Border-Radius
 .border-radius-none { border-radius: $border-radius-none; }
@@ -457,3 +470,13 @@ p, a, h1, h4, h5, h6 {
 .border-radius-5 { border-radius: $border-radius-level-5; }
 .border-radius-6 { border-radius: $border-radius-level-6; }
 
+// Index
+
+.z-index-1 { z-index: 1; }
+.z-index-2 { z-index: 2; }
+.z-index-3 { z-index: 3; }
+.z-index-5 { z-index: 4; }
+.z-index-6 { z-index: 5; }
+.z-index-7 { z-index: 6; }
+.z-index-8 { z-index: 7; }
+.z-index-9 { z-index: 8; }
